--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     >
         <!-- Load an asset - GLTF Model -->
         <a-assets>
-        <a-asset-item id="Planet" response-type="arraybuffer" src=".\test2.glb"></a-asset-item>
+        <a-asset-item id="Planet" response-type="arraybuffer" src=".\_on.glb"></a-asset-item>
         </a-assets>
         
         <!-- Add a camera -->
@@ -42,4 +42,5 @@
     </a-scene>
 
 </body>
+
 
